add a new button

--- a/visi.html
+++ b/visi.html
@@ -8,5 +8,5 @@
 </head>
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum tempora eos debitis quos nam libero harum, optio ducimus odit sunt magnam impedit. Iusto quos officiis, odio unde aperiam quia laborum!</p>
-</body>
+<button>click</button>
 </html>
